Updated HTML and CSS

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -10,8 +10,13 @@
  grey - rgb(41, 41, 41)
  yellow - rgb(255, 230, 0)
 */
-body, html, head {
+body, html {
     width: 500px;
+}
+
+
+body {
+    width: 650px;
 }
 
 /* Header */
@@ -42,43 +47,67 @@ header > img {
 /*  Main */
 
 main {
-    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
-
-.img {
-    margin: 5px;
-    width: 100vw;
-    height: 230px;
-    background-attachment: local;
-
+.materia {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin: 2px;
+    width: 640px;
+    height: 350px;
 }
 
-
-div > h1 , p {
+.materia > section {
+    background-image: linear-gradient(to top, black , rgba(0, 0, 0, 0.041));
     
-    display: block;
-    color: rgb(255, 230, 0);
+}
+.materia > section:hover {
+    background-color: rgba(0, 0, 0, 0.247);
 }
 
+.materia > section > h1, p {
+    margin: 5px 30px;
+    padding: 1px 5px;
+    border-radius: 2px;
+    color: white;
+}
 
-#comportamento {
-    background-image: url(https://www.michael-giso.com/wp-content/uploads/2021/01/Hervey-Specter-Suit.jpg);
-    background-size: cover;
-    background-position: right center;
+.materia > section > h1 {
+    font-size: 1.8em;
+}
+
+.topico {
+    width: fit-content;
+    color: rgb(41, 41, 41);
+    background-color: rgb(255, 230, 0);
+}
+
+#foto-materia-1{
     background-repeat: no-repeat;
-
-    
-
-}
-
-#desenvolvimento {
- background-image: url(https://www.vindeacristo.org/comeuntochrist/pxy/cdn/fc/f2/fcf2f6dcf6b808fa027795738e8c14b9ee5358c1/jesus_sermon_mount.jpeg);
- background-size: cover;
-}
-
-#relacionamento {
-    background-image: url(https://as2.ftcdn.net/v2/jpg/01/75/82/39/1000_F_175823916_EK0YVeOtX5J5nomUQJLsNFJwRK8wTjxY.jpg);
+    background-position: bottom center;
     background-size: cover;
+    background-image: url(https://i.ytimg.com/vi/UCKgQe6n5Lk/maxresdefault.jpg);
 }
+
+#foto-materia-2 {
+
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: cover;
+    background-image: url(
+        https://www.loreal-paris.com.br/-/media/project/loreal/brand-sites/oap/americas/br/artigos/cabelo/artigos-planilha-nova-1_1/keila/shutterstock_477259096.jpg);
+}
+
+#foto-materia-3{
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-image: url(https://mhmcdn.manualdohomemmoderno.com.br/?w=750&h=450&quality=31&clipping=landscape&url=https://manualdohomemmoderno.com.br/files/2021/09/cortes-para-cabelo-liso-masculino-em-alta-para-2022-cortes-para-cabelo-liso-masculino-em-alta-para-2022-10.jpg);
+}
+
+
 
