--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -11,12 +11,12 @@
  yellow - rgb(255, 230, 0)
 */
 body, html {
-    width: 500px;
+    width: 90vw;
 }
 
 
 body {
-    width: 650px;
+    width: 90vw;
 }
 
 /* Header */
@@ -57,7 +57,7 @@ main {
     flex-direction: column;
     justify-content: end;
     margin: 2px;
-    width: 500px;
+    width: 90vw;
     height: 350px;
 }
 
